changes for pdf view

--- a/WEB/src/app/home/content-mgmnt/questions/question.html
+++ b/WEB/src/app/home/content-mgmnt/questions/question.html
@@ -134,15 +134,14 @@
         </mat-horizontal-stepper>
       </mat-tab>
       <mat-tab label="Previous Year">
-        <div class="row">
-          <div class="example-button-row col-md-3" *ngFor="let pdf of pdfList">
-            <button mat-raised-button (click)="downloadPDf(pdf)" color="accent">{{pdf.name}}</button>
+      
+          <div class="col-md-3" *ngFor="let pdf of pdfList">
+            <button mat-raised-button (click)="viewPDFDocument(pdf)" color="accent">{{pdf.name}}</button>
           </div>
-        </div>
-        <!--div class="col-md-7">
-          <ngx-extended-pdf-viewer [src]="'assets/question/Nursery/MoralStoriesinEnglish/MoralStories/pdf/Nursery-2011.pdf'" useBrowserLocale="false" type="application/pdf" width="100%"></ngx-extended-pdf-viewer>
-        </div-->
 
+          <ngx-extended-pdf-viewer *ngIf="displayPDF" [src]="pdfsrc" useBrowserLocale="true" [delayFirstView]="1000"
+            [showHandToolButton]="true" [handTool]=false> </ngx-extended-pdf-viewer>
+        
       </mat-tab>
     </mat-tab-group>
   </section>
