changes for EBook and PDF display

--- a/WEB/src/app/home/content-mgmnt/topics/topic.html
+++ b/WEB/src/app/home/content-mgmnt/topics/topic.html
@@ -79,7 +79,7 @@
             </div>
             <li class="borders"><i  class="fa fa-clock" aria-hidden="true"></i> {{topic.playFileTime}} Mins.</li>
             <li><a (click)="markFavorites(topic)"><i class="fa fa-heart like-icon" aria-hidden="true"></i></a></li>
-            <li><a (click)="viewQuestions(topic)"><i class="fa fa-question-circle" aria-hidden="true"></i></a></li>
+            <li><a (click)="viewQuestions(topic)"><span class="text-size">Question</span></a></li>
             <li *ngIf="user.role=='ADMIN'" class="borders"><a (click)="editTopicDetail(topic)" style="cursor:pointer">
               <i class="fas fa-pen edit-icon"></i></a></li>
             <li *ngIf="user.role=='ADMIN'"><a (click)="deleteTopicDetail(topic)" style="cursor:pointer">
@@ -100,7 +100,8 @@
           <p class="video-text"><a (click)="onChapterChange(chapter.displayName)" style="cursor:pointer"><i class="fas fa-video"></i>{{chapter.displayName}}</a></p>
           <ul class="class-edit">
               <li><i class="fa fa-clock" aria-hidden="true"></i> {{chapter.timeRequired}} Mins.</li>
-              <li><a (click)="viewQuestionsForChapter(chapter)"><i class="fa fa-question-circle" aria-hidden="true"></i></a></li>
+              <li><a (click)="viewQuestionsForChapter(chapter)" ><span class="text-size">Question</span></a></li>
+              <li><a (click)="viewEBookForChapter(chapter)" *ngIf="chapter.isEBookAvilable"><span class="text-size">E-Book</span></a></li>
           </ul>
           <ul class="class-edit" *ngIf="user.role=='ADMIN'">
             <li><a (click)="addTopicDetails(chapter)" style="cursor:pointer"><i class="fas fa-plus"></i></a></li>
@@ -121,7 +122,8 @@
           <p class="video-text"><a (click)="onSubjectChange(subject.displayName)" style="cursor:pointer"><i class="fas fa-video"></i>{{subject.displayName}}</a></p>
           <ul class="class-edit">
               <li class="borders"><i class="fa fa-clock" aria-hidden="true"></i> {{subject.timeRequired}} Mins.</li>
-              <li><a (click)="viewQuestionsForSubject(subject)"><i class="fa fa-question-circle" aria-hidden="true"></i></a></li>
+              <li><a (click)="viewQuestionsForSubject(subject)"><i class="fa fa-question-circle" aria-hidden="true"></i><span class="text-size">Question</span></a></li>
+              <li><a (click)="viewEBookForSubject(subject)" *ngIf="subject.isEBookAvilable"><span class="text-size">E-Book</span></a></li>
           </ul>
           <ul class="class-edit" *ngIf="user.role=='ADMIN'">
             <li><a (click)="addChapterDetails(subject)" style="cursor:pointer"><i class="fas fa-plus"></i></a></li>
