--- a/WEB/src/app/home/content-mgmnt/questions/question.html
+++ b/WEB/src/app/home/content-mgmnt/questions/question.html
@@ -134,14 +134,11 @@
         </mat-horizontal-stepper>
       </mat-tab>
       <mat-tab label="Previous Year">
-      
-          <div class="col-md-3" *ngFor="let pdf of pdfList">
-            <button mat-raised-button (click)="viewPDFDocument(pdf)" color="accent">{{pdf.name}}</button>
-          </div>
 
-          <ngx-extended-pdf-viewer *ngIf="displayPDF" [src]="pdfsrc" useBrowserLocale="true" [delayFirstView]="1000"
-            [showHandToolButton]="true" [handTool]=false> </ngx-extended-pdf-viewer>
-        
+        <div class="col-md-3" *ngFor="let pdf of pdfList">
+          <button  mat-stroked-button color="accent" (click)="viewPDFDocument(pdf)" class='button-margin'>{{pdf.name}}</button>
+          <span matBadge="pdf.visitCount" matBadgeOverlap="false" *ngIf="pdf.visitCount>0">You have view this question</span>
+        </div>
       </mat-tab>
     </mat-tab-group>
   </section>
